fix(tooltip): Fix tooltip alignment in toolbar
Fix tooltip alignment in the Codebases toolbar; add text to provide more spacing and meet future design specs.

fixes: https://github.com/openshiftio/openshift.io/issues/1179

--- a/src/app/space/create/codebases/codebases-toolbar/codebases-toolbar.component.less
+++ b/src/app/space/create/codebases/codebases-toolbar/codebases-toolbar.component.less
@@ -3,12 +3,14 @@
   padding: 36px 20px;
 }
 .toolbar-pf-action-right {
-  .tooltip-left {
-    /* stylelint-disable */
-    left: 2050px !important;
-    /* stylelint-enable */
-  }
-  .pficon-add-circle-o {
+  .add-codebase-tooltip {
     color: @color-pf-blue-400;
+    &:hover {
+      cursor: pointer;
+    }
+    @media (max-width: 992px) {
+      position: absolute;
+      right: 20px;
+    }
   }
 }
